<resources>
    <string name="app_name">Nairobi Story Blogging Service</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello i dont know</string>
    <string name="input_thy_electronics_mail">Enter your Email here</string>
    <string name="input_thy_secret_phrase">Enter your Password here</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="email_addiction">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="_10_20">10:20</string>
    <string name="comment_goes_here">Comment Goes Here</string>
</resources>
